<resources>
    <string name="app_name">Shefaa</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="findpharmacy">Find a pharmacy</string>
    <string name="findPharmacy">Find a Pharmacy</string>
    <string name="pleaseenteremail">Please Enter Username</string>
    <string name="pleaseenterepassword">Please Enter Password</string>
    <string name="ErrorConnection">Check your internet connection</string>
    <string name="usernameorpasswordError">username or password is wrong </string>
    <string name="Price">Price :</string>
    <string name="Rate">Rate</string>
    <string name="Specialization">Specialization :</string>
    <string name="pleasewait">please waiting....</string>
    <string name="search_noresults">No Search</string>
    <string name="noconnection">No Internet Connection</string>
    <string name="Retry">Retry</string>
    <string name="Name">Name :</string>
    <string name="Address">Address :</string>
    <string name="searchbynamecitycountry">Name ,City Country</string>
    <string name="Cancel">Cancel</string>
    <string name="Ok">Ok</string>
    <string name="Welcome">Welcome</string>
    <string name="PleaseWait">Please Wait.......</string>
    <string name="All">All</string>
    <string name="drawer_item_MyMessage">My Message</string>
    <string name="drawer_item_MyNotification">My Notification</string>
    <string name="drawer_item_MyPrescriptions">My Prescriptions</string>
    <string name="drawer_item_About">About</string>
    <string name="drawer_item_my_ContactUs">Contact US</string>
    <string name="drawer_item_my_LogOut">Log Out</string>
    <string name="OpenHoursdoctor">Open Hours</string>
    <string name="OpenHoursPharmacy">Open Hours</string>
    <string name="Map">Map</string>
    <string name="Sunday">SunDay</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednsday">Wednsday</string>
    <string name="Saturday">Saturday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Appointment">Appointment</string>
    <string name="Done">Done</string>
    <string name="Availabletimes">Available times</string>
    <string name="Urgent">Urgent</string>
    <string name="PleaseSelectTime">Please select time</string>
    <string name="Reguler">Regular</string>
    <string name="Approved">Approved</string>
    <string name="NotApproved">Not Approved</string>
    <string name="Title">Title :</string>
    <string name="date">Date</string>
    <string name="Patient">Patient</string>
    <string name="Time">Time</string>
    <string name="Medicine">Medicine :</string>
    <string name="PharmacistName">Pharmacist Name</string>
    <string name="finddoctor">Find Doctor</string>
    <string name="Appointment_Id">Appointment Id</string>
    <string name="Patient_name">Patient Name:</string>
    <string name="UrgentAppointmentCause">Urgent Appointment Cause</string>
    <string name="Appointment_Status">Appointment Status</string>
    <string name="AppointmentDetail">Appointment Details</string>
    <string name="AddRating">Add Rating</string>
    <string name="cancel">Cancel</string>
    <string name="pleaseenterpassword">Please Enter Password</string>
    <string name="Thankyouforrating">Thank you for rating</string>
    <string name="rate">rate</string>
    <string name="PrescriptionName">Prescription Name:</string>
    <string name="Doctor">Doctor</string>
    <string name="search_medicinename">Medicine Name</string>
    <string name="ID">ID :</string>
    <string name="Amount">Amount :</string>
    <string name="Remain">Remain :</string>
    <string name="Diagnosis_of_Disease">Diagnosis of Disease :</string>
    <string name="TestNeeded">Test Needed</string>
    <string name="TestResult">Test Result</string>
    <string name="Messages">Messages</string>
    <string name="PleaseEnterAmmount">Please Enter New Amount</string>
    <string name="ModifyAmount">Modify Amount</string>
    <string name="findMedicine">Find Medicine</string>
    <string name="AppointmentDate">Appointment Date</string>
    <string name="AppointmentTime">Appointment Time</string>
    <string name="Prescriptions">Prescriptions</string>
    <string name="Medicine_Potion">Medicine and Potion</string>
    <string name="Potion">Potion :</string>
    <string name="Reply">Message to</string>
    <string name="To">To</string>
    <string name="Subject">Subject</string>
    <string name="send">Send</string>
    <string name="PleaseCheckInternetConnection">Please Check Internet Connection</string>
    <string name="Username">Username</string>
    <string name="pleaseopenlocation">Please Turn on Location</string>
    <string name="allowaddress">allow</string>
    <string name="Close">Close</string>
    <string name="title_location_permission">please all location permition</string>
    <string name="text_location_permission">permit</string>
    <string name="ok">Ok</string>
    <string name="You">You</string>
    <string name="Language">Language</string>
    <string name="ENGLISH">ENGLISH</string>
    <string name="ARABIC">العربية</string>
    <string name="SendMessageSuccessfuly">Send Message Succesfuly</string>
    <string name="NamePharmacy">Name :</string>
    <string name="searchbynamecitycountrypharmacy">Medicine,Pharmacy,Zone…</string>
    <string name="searchbynamecitycountryDoctor">Doctor,Zone…</string>
    <string name="MedicineDetail">Medicine details</string>
    <string name="Register">Sign Up</string>
    <string name="MyMedicine">My Medicine</string>
    <string name="Approve">Approve</string>
    <string name="donthaveaccount">you don\'t have an account</string>
    <string name="Medicines">Medicines</string>
    <string name="Diagnosis">Diagnosis</string>
    <string name="PleaseEnterUrgentAppointmentCause">Please Enter Urgent Appointment Cause</string>
    <string name="urgentalerttitle">why do you choose urgent appointment?</string>
    <string name="urgentalert">This option is used only in emergencies</string>
    <string name="urgentalert1">We will notify you if this appointment is approved</string>
    <string name="urgentalert2">If it is not necessary you can book a regular appointment
        at the doctor\'s available times</string>
    <string name="edittimeappointment">date and time edites succesfully</string>
    <string name="approvemessage">appointment approved succesfully</string>
    <string name="errorhapened">Some thing goes wrong</string>
    <string name="bookedSucess">Appointment booked Successfully</string>
    <string name="AlreadyAdd">this appointment\'s already booked</string>
    <string name="PrescriptionDetail">Prescription Details</string>
    <string name="amountedited">amount edited succesfully</string>
    <string name="AppointmentRequest">Request Appointment</string>
    <string name="pleaseWait">Please wait &#8230;</string>
    <string name="forgotPassword">Forgot password ?</string>
    <string name="ForgotPassword">Forgot password</string>
    <string name="TypeDot">Gender :</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="InviteFriendEmail">Invite friend (email)</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="FirstName">First name</string>
    <string name="Nickname">Nick name</string>
    <string name="AcceptPrivacy">Accept privacy</string>
    <string name="contentDescription">contentDescription</string>
    <string name="ManageAccount">Manage account</string>
    <string name="ManageAppointments">Manage appointments</string>
    <string name="MyMedicalProfile">Medical profile</string>
    <string name="Notifications">Notifications</string>
    <string name="entercorrectemail">Please enter correct Email</string>
    <string name="EmailNoFound">Email no found</string>
    <string name="PleaseCheckYourEmail">Please check your email</string>
    <string name="pleaseEnterUserName">Please enter user name</string>
    <string name="NoMatchPassword">Not match password</string>
    <string name="pleaseenterFirstName">Please enter first name</string>
    <string name="pleaseenterLastName">Please enter last name</string>
    <string name="PleaseSelectGender">Please select gender</string>
    <string name="accepttermsandconditions">Please accept our privacy</string>
    <string name="TermsAndConditions">Terms and conditions</string>
    <string name="Profile">Profile</string>
    <string name="Apply">Apply</string>
    <string name="NewPassword">New password</string>
    <string name="ConfirmNewPassword">Confirm new password</string>
    <string name="Appointments">Appointments</string>
    <string name="TestsResults">Tests results</string>
    <string name="MedicalProfile">Medical profile</string>
    <string name="PrescriptionInfo">Prescription Info</string>
    <string name="Blogs">Blogs</string>
    <string name="Magazine">Magazine</string>
    <string name="Search">Search</string>
    <string name="welcomeMessage">Welcome on board! \n Your doctor just in your home</string>
    <string name="alreadyHaveAccount">Already have account?</string>
    <string name="Save">Save</string>
    <string name="NoDataFound">No data found</string>
    <string name="Age">Age</string>
    <string name="Height">Height</string>
    <string name="Smoke">Smoke?</string>
    <string name="Allergies">Allergies</string>
    <string name="Diagnosis_of_Disease_headache">Diagnosis of disease</string>
    <string name="Emergency_contact">Emergency contact</string>
    <string name="Pregnant">Pregnant</string>
    <string name="Weight">Weight</string>
    <string name="addNew">Add new</string>
    <string name="AddFiles">Add files</string>
    <string name="Doctor_name">Doctor name</string>
    <string name="tests">Tests</string>
    <string name="Code">Code</string>
    <string name="Key">Key</string>
    <string name="Pharmacy">Pharmacy</string>
    <string name="Lab">Laboratory</string>
    <string name="Cost">Cost</string>
    <string name="SearchForDoctor">Search for doctor</string>
    <string name="Doctors">Doctors</string>
    <string name="Clinic">Clinic</string>
    <string name="Home">Home</string>
    <string name="NewAppointment">New appointment</string>
    <string name="DashBoard">Dash Board</string>
    <string name="AdvanceSearch">Advance search</string>
    <string name="SelfMonitor">Self monitor</string>
    <string name="guardianship">Guardianship</string>
    <string name="ClinicAppointment">Clinic appointment</string>
    <string name="HomeAppointment">Home appointment</string>
    <string name="AddAppointment">Add appointment</string>
    <string name="SuggestedHour">Suggested hour</string>
    <string name="SendYourLocation">Send your location</string>
    <string name="AddTestResult">Add test result</string>
    <string name="medicineName">Medicine name</string>
    <string name="activeIngredientName">Active ingredient name</string>
    <string name="potion">Potion</string>
    <string name="howManyTimes">How many times</string>
    <string name="Per">Per</string>
    <string name="Duration">Duration</string>
    <string name="Remind">Remind</string>
    <string name="TimeFirstPotion">Time first potion</string>
    <string name="DateFirstPotion">Date first potion</string>
    <string name="RemindSettings">Remind settings</string>
    <string name="profileUpdateSuccessfully">Profile update successfully</string>
    <string name="updateProfileFailed">Update profile failed</string>
    <string name="postDetails">Post details</string>
    <string name="ShareLink">Share link</string>
    <string name="PostLikedSuccessfully">Post liked successfully</string>
    <string name="PostLikedFailed">Post liked failed</string>
    <string name="PostComments">Post comments</string>
</resources>