<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/md_margin"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="@dimen/md_margin"
    app:cardUseCompatPadding="true"
    tools:ignore="MissingPrefix">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/md_padding"
            android:text="@string/urgentalerttitle"
            android:textColor="@color/white"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/MedicineRemainEditText"
            style="@style/AppTheme.TextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sm_margin"
            android:maxLines="6"
            android:text="@string/urgentalert"
            android:textColorHint="@color/lightgray" />

        <TextView
            android:id="@+id/MedicineRemainEditText2"
            style="@style/AppTheme.TextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sm_margin"
            android:maxLines="6"
            android:text="@string/urgentalert1"
            android:textColorHint="@color/lightgray" />

        <TextView
            android:id="@+id/MedicineRemainEditText3"
            style="@style/AppTheme.TextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sm_margin"
            android:maxLines="6"
            android:text="@string/urgentalert2"
            android:textColorHint="@color/lightgray" />

        <RelativeLayout
            android:id="@+id/btncontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/EditTextHeight"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/md_margin"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/Ok"
                android:textColor="@color/white" />

        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>