<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/md_padding"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="@dimen/md_margin"
    app:cardUseCompatPadding="true"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/md_padding"
            android:text="@string/AddRating"
            android:textColor="@color/white"
            android:textStyle="bold|italic" />

        <RatingBar
            android:id="@+id/stars"
            style="@style/AppTheme.LargRatebar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5" />

        <LinearLayout
            android:id="@+id/btncontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnOk"
                style="@style/AppTheme.NormalButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/Ok"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btncancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/redcolor"
                android:text="@string/cancel"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>